Fixed some layout problems.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,5 +46,9 @@
     stroke-opacity: .6;
 }
 
+.container-fluid {
+    overflow-x: hidden;
+}
+
 
 
